--- a/app/src/main/res/layout/item_news_layout.xml
+++ b/app/src/main/res/layout/item_news_layout.xml
@@ -35,6 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_200dp"
             android:paddingHorizontal="@dimen/_8dp"
+            android:src="@drawable/error_placeholder"
+            android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title"
