--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:layout_height="match_parent"
             android:layout_marginHorizontal="30dp"
             android:background="@color/white"
-            android:gravity="center"
+            android:gravity="start"
             android:hint="@string/search_hint"
             android:imeOptions="actionDone"
             android:maxLines="1"
