--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="_14sp">14sp</dimen>
     <dimen name="_150dp">150dp</dimen>
     <dimen name="_20sp">20sp</dimen>
+    <dimen name="_22sp">22sp</dimen>
     <dimen name="_5dp">5dp</dimen>
     <dimen name="_6dp">6dp</dimen>
     <dimen name="_4dp">4dp</dimen>
